--- a/style.css
+++ b/style.css
@@ -5,3 +5,10 @@ body {
 }
 
 h1 {text-align: center;}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
