--- a/style.css
+++ b/style.css
@@ -13,4 +13,8 @@ h1 {text-align: center;}
   width: 50%;
 }
 
-nav a {text-align: center;}
+nav a {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
