--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ figcaption {
   text-align: center;
 }
 
-p#featured-property {
-  width: 50px;
+section p {
+  width: 800px;
   text-align: center;
 }
