--- a/style.css
+++ b/style.css
@@ -29,3 +29,8 @@ section#featured-property p {
   width: 800px;
   text-align: center;
 }
+
+section#details div {
+  display: block;
+  float: left;
+}
