Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -32,5 +32,9 @@ section#featured-property p {
 
 section#details div {
   display: block;
+}
+
+section#details div {
+  display: block;
   float: left;
 }
