--- a/style.css
+++ b/style.css
@@ -33,5 +33,5 @@ section#featured-property p {
 section#details div {
   display: block;
   float: left;
-  background-color: rbg(255,0,0)
+  background-color: rbg(255,0,0);
 }
