Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ section#featured-property p {
   max-width: 800px;
   text-align: center;
   padding-left: 10px;
+  padding-right: 10px;
 }
 
 section#details div {
