--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ figcaption {
 
 section#featured-property p {
   max-width: 800px;
-  display: block;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
 }
 
