--- a/style.css
+++ b/style.css
@@ -37,6 +37,5 @@ section#details div {
   float: left;
   background-color: rgb(255,0,0);
   width: 25%;
-  padding-left: 10px;
-  padding-right: 10px;
+  text-align: center;
 }
